# snapshot-testing

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
test-snapshot-testing/: Cargo.toml  test.sh
test-snapshot-testing/src/: main.rs
tests/: end-to-end-testing.rs  test.sh
