[package]
edition = "2021"
name = "snapshot-testing"
version = "0.1.4" # Keep in sync with README.md audit command
description = "Assert that a multi-line string equals the contents of an easily updatable snapshot file. Print a nice colored diff if not."
homepage = "https://github.com/Enselic/snapshot-testing"
documentation = "https://docs.rs/snapshot-testing"
readme = "README.md"
keywords = ["snapshot", "testing"]
license = "Unlicense"
repository = "https://github.com/Enselic/snapshot-testing"
exclude = ["/.github", "/.gitignore", "/tests"] # Simplify auditing

# We use the same nice underlying colored diff engine that insta is using.
[dependencies.similar-asserts]
version = "1.7.0" # TODO: Require https://github.com/mitsuhiko/similar-asserts/pull/15
default-features = false

# Already a dependency of similar-asserts that we also make use of.
[dependencies.console]
version = "0.15.10"
default-features = false
