[package]
edition = "2021"
name = "snapshot-testing"
version = "0.1.6" # Keep in sync with README.md audit command
description = "Test that strings equal easily updatable snapshot files. Show nice colored diffs if not."
homepage = "https://github.com/Enselic/snapshot-testing"
documentation = "https://docs.rs/snapshot-testing"
readme = "README.md"
keywords = ["snapshot", "testing"]
license = "Unlicense"
repository = "https://github.com/Enselic/snapshot-testing"
exclude = ["/.github", "/.gitignore", "/tests"] # Simplify auditing

# We use the same nice underlying colored diff engine that insta is using.
[dependencies.similar-asserts]
version = "1.7.0"
default-features = false

# Already a dependency of similar-asserts that we also make use of.
[dependencies.console]
version = "0.15.10"
default-features = false
